@@ -60,8 +60,8 @@ public class WebTest {
 
     public void doTest() throws Exception {
 
-        URL url = new URL("http://" + host  + ":" + port
-                   + contextRoot + "/jsp/test.jspx");
+        URL url = URI.create("http://" + host  + ":" + port
+                   + contextRoot + "/jsp/test.jspx").toURL();
         System.out.println("Connecting to: " + url.toString());
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.connect();
