@@ -56,8 +56,8 @@ public class WebTest {
         // An error should be raised with undeclared tag
 
         try {
-            URL url = new URL("http://" + host  + ":" + port
-                              + contextRoot + "/jsp/test.jsp");
+            URL url = URI.create("http://" + host  + ":" + port
+                              + contextRoot + "/jsp/test.jsp").toURL();
             System.out.println("Connecting to: " + url.toString());
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.connect();
@@ -79,8 +79,8 @@ public class WebTest {
 
         BufferedReader bis = null;
         try {
-            URL url = new URL("http://" + host  + ":" + port
-                              + contextRoot + "/jsp/test2.jsp");
+            URL url = URI.create("http://" + host  + ":" + port
+                              + contextRoot + "/jsp/test2.jsp").toURL();
             System.out.println("Connecting to: " + url.toString());
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.connect();
